# Event-Driven-Backtester-library-

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: ma_crossover.rs  perpetual_funding.rs  walk_forward.rs
src/: engine.rs  error.rs  events.rs  lib.rs  types.rs  walkforward.rs
src/data/: bar.rs  csv.rs  memory.rs  mod.rs
src/execution/: fees.rs  funding.rs  mod.rs  simulated.rs  slippage.rs
src/metrics/: mod.rs
src/portfolio/: mod.rs  position.rs  trade.rs
src/strategy/: ma_crossover.rs  mod.rs
tests/: integration_test.rs
