[package]
name = "event_driven_backtester"
version = "0.1.0"
edition = "2021"
authors = ["Gelato Trade"]
description = "Event-driven backtesting library with realistic slippage, fees, funding and walk-forward analysis"
license = "MIT"
repository = "https://github.com/gelatotrade/event-driven-backtester-library-"
readme = "README.md"
keywords = ["backtest", "trading", "quant", "crypto", "finance"]
categories = ["finance", "simulation"]

[lib]
name = "event_driven_backtester"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
thiserror = "1"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[[example]]
name = "ma_crossover"
path = "examples/ma_crossover.rs"

[[example]]
name = "perpetual_funding"
path = "examples/perpetual_funding.rs"

[[example]]
name = "walk_forward"
path = "examples/walk_forward.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
